# NewsPortal

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app_content/: admin.py  apps.py  urls.py  views.py
app_content/forms/: article.py  category.py  tag.py
app_content/migrations/: 0001_initial.py  0002_article_tags.py  0003_article_category_article_cover_image_and_more.py  0004_article_cover_thumbnail_alter_article_cover_image.py  0005_article_views_count.py  0006_alter_article_author_alter_article_category_and_more.py  0007_add_search_indexes.py
app_content/models/: article.py  category.py  revision.py  tag.py
app_content/serializers/: article.py  author.py  category.py  tag.py  translation_utils.py
app_content/services/: article_query_factory.py  author_content_factory.py  category_content_factory.py
app_content/signals/: article_signals.py
app_content/templates/app_content/: article_detail.html  articles_by_category.html  articles_by_tag.html  base.html  home.html
app_content/views/: article.py  author.py  category.py  docs.py  search.py  search_wrapper.py  tag.py
core/: ckediror_settings.py  settings.py  urls.py
locale/ru/LC_MESSAGES/: django.po  djangojs.po
theme/templates/: base.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_photo.py
